[package]
name = "rustpad"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
operational-transform = "0.6.0"
warp = "0.3.1"
tokio = { version = "1.6.1", features = ["full"] }
dotenv = "0.15.0"
