[package]
name = "rustpad-wasm"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bytecount = { version = "0.6.3", default-features = false }
console_error_panic_hook = { version = "0.1", optional = true }
operational-transform = { version = "0.6.1", default-features = false, features = ["serde"] }
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.99", default-features = false, features = ["std"] }
wasm-bindgen = { version = "0.2.87", default-features = false }
js-sys = { version = "0.3.64", default-features = false }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.37", default-features = false }
